@@ -56,3 +56,4 @@ multimedia/mplayer-codecs
 xap/MPlayer
 multimedia/libdvdcss
 multimedia/flashplayer-plugin
+xap/libreoffice
