@@ -1,0 +1,23 @@
+[Desktop Entry]
+Name=Database
+Name[de]=Datenbanken
+Name[fr]=Bases de données
+Comment=LibreOffice Base
+Version=1.0
+Terminal=false
+Icon=libreoffice4.1-base
+Type=Application
+Categories=Office;Database;X-Red-Hat-Base;X-MandrivaLinux-MoreApplications-Databases;
+Exec=libreoffice4.1 --base %U
+MimeType=application/vnd.oasis.opendocument.database;application/vnd.sun.xml.base;
+StartupNotify=true
+X-GIO-NoFuse=true
+Keywords=Data;SQL;
+InitialPreference=5
+X-Ayatana-Desktop-Shortcuts=X-New
+StartupWMClass=libreoffice-base
+X-KDE-Protocols=file,http,smb,ftp,webdav
+[X-New Shortcut Group]
+UnityQuicklist=New Database
+Exec=/opt/libreoffice4.1/program/s-base %U
+TargetEnvironment=Unity
