@@ -1,0 +1,16 @@
+[Desktop Entry]
+Name=Office Suite
+Name[de]=Office-Suite
+Name[fr]=Suite bureautique
+Comment=LibreOffice
+Version=1.0
+Terminal=false
+Icon=libreoffice4.1-startcenter
+Type=Application
+Categories=Office;X-Red-Hat-Base;X-SuSE-Core-Office;X-MandrivaLinux-Office-Other;
+Exec=libreoffice4.1 %U
+MimeType=application/vnd.openofficeorg.extension;
+StartupNotify=true
+X-GIO-NoFuse=true
+StartupWMClass=libreoffice-startcenter
+X-KDE-Protocols=file,http,smb,ftp,webdav
