@@ -1,0 +1,174 @@
+#!/bin/sh
+
+# Slackware build script for LibreOffice
+
+# Copyright 2006,2007,2008,2009,2010  Robby Workman, Northport, Alabama, USA
+# Copyright 2010-2013 Niels Horn, Rio de Janeiro, RJ, Brazil
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+# Modified by Niels Horn <niels.horn@gmail.com>
+# Revision date: 2013/11/06
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=libreoffice
+VERSION=${VERSION:-"4.2.6"}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+# These variables seem to change with (almost) every release...
+SRCVERSION=$VERSION
+SRCSHORT=$(echo $VERSION | cut -f1-2 -d.)
+
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+# Until now all releases were without the JRE...
+WJRE=${WJRE:-no}
+
+# If you want to disable java support by removing executable permissions
+# form LibreOffice's java loader (this will not affect other apps), set this
+# variable to "YES"   Default is "NO"
+DISABLE_JAVA=${DISABLE_JAVA:-NO}
+
+# Change source package name
+if [ "$ARCH" = "x86_64" ]; then
+  SRCARCH="x86-64"
+  PKGARCH="$ARCH"
+  URLARCH="x86_64"
+elif [ "$ARCH" = "arm" ]; then
+  printf "\n$ARCH is unsupported for LibreOffice...\n\n"
+  exit 1
+else
+  SRCARCH="x86"
+  PKGARCH="i586"
+  URLARCH="x86"
+fi
+
+if [ $WJRE != no ]; then
+  TARJRE="-wJRE"
+else
+  TARJRE=""
+fi
+
+set -eu
+
+# We have all the variables, construct the name of the tarball
+TARNAME="LibreOffice_${SRCVERSION}-secfix_Linux_${SRCARCH}_rpm${TARJRE}.tar.gz"
+
+# Download mirror
+MIRROR=download.documentfoundation.org/$PRGNAM/stable/$VERSION/rpm/$URLARCH
+
+wget -c http://$MIRROR/$TARNAME
+
+# Ignore this - it's just to get the toplevel directory name of the
+# extracted tarball archive
+SOURCEDIR=$(tar tzf $CWD/$TARNAME 2>/dev/null | head -n 1 | tr -d \/)
+# If the above operation failed for some reason, unset SOURCEDIR so that
+# the "set -eu" below will cause us to bail out with an error
+[ -z $SOURCEDIR ] && unset SOURCEDIR
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+rm -rf $TMP/$SOURCEDIR
+
+# Extract tarball
+tar xvf $CWD/$TARNAME -C $TMP
+
+# We'll remove this regardless of whether we're using the jre tarball...
+rm -rf $TMP/$SOURCEDIR/{JavaSetup.jar,installdata,setup}
+rm -rf $TMP/$SOURCEDIR/RPMS/{userland,jre-*-linux-*.rpm}
+
+cd $TMP/$SOURCEDIR/RPMS/
+
+# No, I don't want to update our packaged files after the fact
+rm -f *onlineupdate*.rpm # We don't want this
+
+for FILE in *.rpm ; do rpm2cpio < $FILE | cpio -imdv ; done
+rm -rf desktop-integration *.rpm
+mv opt usr $PKG
+cd $PKG
+
+# Create symlinks in /usr/bin to actual binaries
+cd $PKG/usr/bin
+  for FILE in \
+    sbase scalc sdraw simpress smath soffice spadmin swriter unopkg ; do
+      rm -f $FILE
+      ln -sf ../../opt/libreoffice$SRCSHORT/program/$FILE $FILE ;
+  done
+cd -
+
+# Remove DejaVu and Liberation fonts - these are included in other packages
+rm -f opt/libreoffice$SRCSHORT/share/fonts/truetype/{DejaVu,Liberation}*.ttf
+
+# Fix Exec commands in the desktop files
+# See http://bugzilla.xfce.org/show_bug.cgi?id=2430
+cd $PKG/opt/libreoffice$SRCSHORT/share/xdg/
+  for APP in base calc draw impress math writer; do
+    sed -i "s%Exec=libreoffice -%Exec=/opt/libreoffice$SRCSHORT/program/s%" $APP.desktop ;
+  done
+cd -
+
+# Install our own tweaked set of desktop files
+#find $PKG -name '*.desktop' | xargs rm -f
+#mkdir -p $PKG/usr/share/applications
+#for FILE in $(ls $CWD/desktop/*.desktop); do
+#  cp -a $FILE $PKG/usr/share/applications/
+#done
+
+# Move docs to their expected locations
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cd $PKG/opt/libreoffice$SRCSHORT
+  mv CREDITS* *LICENSE* readmes $PKG/usr/doc/$PRGNAM-$VERSION
+cd -
+# Remove executable flag from some docs
+cd $PKG/usr/doc/$PRGNAM-$VERSION
+  find . -type f -exec chmod -x {} \;
+cd -
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+# Disable Java support if desired (see above)
+if [ "$DISABLE_JAVA" = "YES" ]; then
+  chmod -x $PKG/opt/libreoffice$SRCSHORT/ure/bin/javaldx
+fi
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+# Fix ownership and permissions and make the package
+chown -R root:root .
+find . -type d -exec chmod 755 {} \;
+chmod -R u+rw,go+r-w,a-s .
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-${VERSION}-$PKGARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $SOURCEDIR $PKG
