@@ -1,0 +1,12 @@
+           |-----handy-ruler------------------------------------------------------|
+libreoffice: LibreOffice (Productivity Suite)
+libreoffice:
+libreoffice: LibreOffice is a productivity suite that is compatible with other
+libreoffice: major office suites, and available on a variety of platforms. It is
+libreoffice: free software and therefore free to download, use and distribute.
+libreoffice:
+libreoffice: This is a repackaging of the official LibreOffice binary RPM's
+libreoffice: distributed by the upstream developers.
+libreoffice:
+libreoffice: 
+libreoffice: Package created by Niki Kovacs <info@microlinux.fr>
